src/Skia/Bindings/Sk_image.hs


-- | Function pointer to 'sk_image_is_alpha_only'
foreign import ccall "&sk_image_is_alpha_only" p'sk_image_is_alpha_only ::
  FunPtr (Ptr (Sk_image) -> IO (CBool))

{- | C function signature:

@
sk_shader_t *sk_image_make_shader(const sk_image_t *image, sk_shader_tilemode_t tileX, sk_shader_tilemode_t tileY, const sk_sampling_options_t *sampling, const sk_matrix_t *cmatrix)
@
-}
foreign import ccall "sk_image_make_shader" sk_image_make_shader ::
  Ptr (Sk_image) -- ^ C argument @"const sk_image_t * image"@
  -> Sk_shader_tilemode -- ^ C argument @"sk_shader_tilemode_t tileX"@
  -> Sk_shader_tilemode -- ^ C argument @"sk_shader_tilemode_t tileY"@
  -> Ptr (Sk_sampling_options) -- ^ C argument @"const sk_sampling_options_t * sampling"@
  -> Ptr (Sk_matrix) -- ^ C argument @"const sk_matrix_t * cmatrix"@
  -> IO (Ptr (Sk_shader)) -- ^ C return type: @"sk_shader_t *"@

-- | Function pointer to 'sk_image_make_shader'
foreign import ccall "&sk_image_make_shader" p'sk_image_make_shader ::
  FunPtr (Ptr (Sk_image) -> Sk_shader_tilemode -> Sk_shader_tilemode -> Ptr (Sk_sampling_options) -> Ptr (Sk_matrix) -> IO (Ptr (Sk_shader)))

{- | C function signature:

@
sk_shader_t *sk_image_make_raw_shader(const sk_image_t *image, sk_shader_tilemode_t tileX, sk_shader_tilemode_t tileY, const sk_sampling_options_t *sampling, const sk_matrix_t *cmatrix)
@
-}
foreign import ccall "sk_image_make_raw_shader" sk_image_make_raw_shader ::
  Ptr (Sk_image) -- ^ C argument @"const sk_image_t * image"@
  -> Sk_shader_tilemode -- ^ C argument @"sk_shader_tilemode_t tileX"@
  -> Sk_shader_tilemode -- ^ C argument @"sk_shader_tilemode_t tileY"@
  -> Ptr (Sk_sampling_options) -- ^ C argument @"const sk_sampling_options_t * sampling"@
  -> Ptr (Sk_matrix) -- ^ C argument @"const sk_matrix_t * cmatrix"@
  -> IO (Ptr (Sk_shader)) -- ^ C return type: @"sk_shader_t *"@

-- | Function pointer to 'sk_image_make_raw_shader'
foreign import ccall "&sk_image_make_raw_shader" p'sk_image_make_raw_shader ::
  FunPtr (Ptr (Sk_image) -> Sk_shader_tilemode -> Sk_shader_tilemode -> Ptr (Sk_sampling_options) -> Ptr (Sk_matrix) -> IO (Ptr (Sk_shader)))

{- | C function signature:

@
_Bool sk_image_peek_pixels(const sk_image_t *image, sk_pixmap_t *pixmap)
@
-}
foreign import ccall "sk_image_peek_pixels" sk_image_peek_pixels ::
  Ptr (Sk_image) -- ^ C argument @"const sk_image_t * image"@
  -> Ptr (Sk_pixmap) -- ^ C argument @"sk_pixmap_t * pixmap"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_image_peek_pixels'
foreign import ccall "&sk_image_peek_pixels" p'sk_image_peek_pixels ::
  FunPtr (Ptr (Sk_image) -> Ptr (Sk_pixmap) -> IO (CBool))

{- | C function signature:

@
_Bool sk_image_is_texture_backed(const sk_image_t *image)
@
-}
foreign import ccall "sk_image_is_texture_backed" sk_image_is_texture_backed ::
  Ptr (Sk_image) -- ^ C argument @"const sk_image_t * image"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_image_is_texture_backed'
foreign import ccall "&sk_image_is_texture_backed" p'sk_image_is_texture_backed ::
  FunPtr (Ptr (Sk_image) -> IO (CBool))

{- | C function signature:

@
_Bool sk_image_is_lazy_generated(const sk_image_t *image)
@
-}
foreign import ccall "sk_image_is_lazy_generated" sk_image_is_lazy_generated ::
  Ptr (Sk_image) -- ^ C argument @"const sk_image_t * image"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_image_is_lazy_generated'
foreign import ccall "&sk_image_is_lazy_generated" p'sk_image_is_lazy_generated ::
  FunPtr (Ptr (Sk_image) -> IO (CBool))

{- | C function signature:

@
_Bool sk_image_is_valid(const sk_image_t *image, gr_recording_context_t *context)
@
-}
foreign import ccall "sk_image_is_valid" sk_image_is_valid ::
  Ptr (Sk_image) -- ^ C argument @"const sk_image_t * image"@
  -> Ptr (Gr_recording_context) -- ^ C argument @"gr_recording_context_t * context"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_image_is_valid'
foreign import ccall "&sk_image_is_valid" p'sk_image_is_valid ::
  FunPtr (Ptr (Sk_image) -> Ptr (Gr_recording_context) -> IO (CBool))

{- | C function signature:

@
_Bool sk_image_read_pixels(const sk_image_t *image, const sk_imageinfo_t *dstInfo, void *dstPixels, size_t dstRowBytes, int srcX, int srcY, sk_image_caching_hint_t cachingHint)
@
-}
foreign import ccall "sk_image_read_pixels" sk_image_read_pixels ::
  Ptr (Sk_image) -- ^ C argument @"const sk_image_t * image"@
  -> Ptr (Sk_imageinfo) -- ^ C argument @"const sk_imageinfo_t * dstInfo"@
  -> Ptr (()) -- ^ C argument @"void * dstPixels"@
  -> CSize -- ^ C argument @"size_t dstRowBytes"@
  -> CInt -- ^ C argument @"int srcX"@
  -> CInt -- ^ C argument @"int srcY"@
  -> Sk_image_caching_hint -- ^ C argument @"sk_image_caching_hint_t cachingHint"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_image_read_pixels'
foreign import ccall "&sk_image_read_pixels" p'sk_image_read_pixels ::
  FunPtr (Ptr (Sk_image) -> Ptr (Sk_imageinfo) -> Ptr (()) -> CSize -> CInt -> CInt -> Sk_image_caching_hint -> IO (CBool))

{- | C function signature:

@
_Bool sk_image_read_pixels_into_pixmap(const sk_image_t *image, const sk_pixmap_t *dst, int srcX, int srcY, sk_image_caching_hint_t cachingHint)
@
-}
foreign import ccall "sk_image_read_pixels_into_pixmap" sk_image_read_pixels_into_pixmap ::
  Ptr (Sk_image) -- ^ C argument @"const sk_image_t * image"@
  -> Ptr (Sk_pixmap) -- ^ C argument @"const sk_pixmap_t * dst"@
  -> CInt -- ^ C argument @"int srcX"@
  -> CInt -- ^ C argument @"int srcY"@
  -> Sk_image_caching_hint -- ^ C argument @"sk_image_caching_hint_t cachingHint"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_image_read_pixels_into_pixmap'
foreign import ccall "&sk_image_read_pixels_into_pixmap" p'sk_image_read_pixels_into_pixmap ::
  FunPtr (Ptr (Sk_image) -> Ptr (Sk_pixmap) -> CInt -> CInt -> Sk_image_caching_hint -> IO (CBool))

{- | C function signature:

@
_Bool sk_image_scale_pixels(const sk_image_t *image, const sk_pixmap_t *dst, const sk_sampling_options_t *sampling, sk_image_caching_hint_t cachingHint)
@
-}
foreign import ccall "sk_image_scale_pixels" sk_image_scale_pixels ::
  Ptr (Sk_image) -- ^ C argument @"const sk_image_t * image"@
  -> Ptr (Sk_pixmap) -- ^ C argument @"const sk_pixmap_t * dst"@
  -> Ptr (Sk_sampling_options) -- ^ C argument @"const sk_sampling_options_t * sampling"@
  -> Sk_image_caching_hint -- ^ C argument @"sk_image_caching_hint_t cachingHint"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_image_scale_pixels'
foreign import ccall "&sk_image_scale_pixels" p'sk_image_scale_pixels ::
  FunPtr (Ptr (Sk_image) -> Ptr (Sk_pixmap) -> Ptr (Sk_sampling_options) -> Sk_image_caching_hint -> IO (CBool))

{- | C function signature:

@
sk_data_t *sk_image_ref_encoded(const sk_image_t *cimage)
@
-}
foreign import ccall "sk_image_ref_encoded" sk_image_ref_encoded ::
  Ptr (Sk_image) -- ^ C argument @"const sk_image_t * cimage"@
  -> IO (Ptr (Sk_data)) -- ^ C return type: @"sk_data_t *"@

-- | Function pointer to 'sk_image_ref_encoded'
foreign import ccall "&sk_image_ref_encoded" p'sk_image_ref_encoded ::
  FunPtr (Ptr (Sk_image) -> IO (Ptr (Sk_data)))

{- | C function signature:

@
sk_image_t *sk_image_make_subset_raster(const sk_image_t *cimage, const sk_irect_t *subset)
@
-}
foreign import ccall "sk_image_make_subset_raster" sk_image_make_subset_raster ::
  Ptr (Sk_image) -- ^ C argument @"const sk_image_t * cimage"@
  -> Ptr (Sk_irect) -- ^ C argument @"const sk_irect_t * subset"@
  -> IO (Ptr (Sk_image)) -- ^ C return type: @"sk_image_t *"@

-- | Function pointer to 'sk_image_make_subset_raster'
foreign import ccall "&sk_image_make_subset_raster" p'sk_image_make_subset_raster ::
  FunPtr (Ptr (Sk_image) -> Ptr (Sk_irect) -> IO (Ptr (Sk_image)))

{- | C function signature:

@
sk_image_t *sk_image_make_subset(const sk_image_t *cimage, gr_direct_context_t *context, const sk_irect_t *subset)
@
-}
foreign import ccall "sk_image_make_subset" sk_image_make_subset ::
  Ptr (Sk_image) -- ^ C argument @"const sk_image_t * cimage"@
  -> Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> Ptr (Sk_irect) -- ^ C argument @"const sk_irect_t * subset"@
  -> IO (Ptr (Sk_image)) -- ^ C return type: @"sk_image_t *"@

-- | Function pointer to 'sk_image_make_subset'
foreign import ccall "&sk_image_make_subset" p'sk_image_make_subset ::
  FunPtr (Ptr (Sk_image) -> Ptr (Gr_direct_context) -> Ptr (Sk_irect) -> IO (Ptr (Sk_image)))

{- | C function signature:

@
sk_image_t *sk_image_make_texture_image(const sk_image_t *cimage, gr_direct_context_t *context, _Bool mipmapped, _Bool budgeted)
@
-}
foreign import ccall "sk_image_make_texture_image" sk_image_make_texture_image ::
  Ptr (Sk_image) -- ^ C argument @"const sk_image_t * cimage"@
  -> Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> CBool -- ^ C argument @"_Bool mipmapped"@
  -> CBool -- ^ C argument @"_Bool budgeted"@
  -> IO (Ptr (Sk_image)) -- ^ C return type: @"sk_image_t *"@

-- | Function pointer to 'sk_image_make_texture_image'
foreign import ccall "&sk_image_make_texture_image" p'sk_image_make_texture_image ::
  FunPtr (Ptr (Sk_image) -> Ptr (Gr_direct_context) -> CBool -> CBool -> IO (Ptr (Sk_image)))

{- | C function signature:

@
sk_image_t *sk_image_make_non_texture_image(const sk_image_t *cimage)
@
-}
foreign import ccall "sk_image_make_non_texture_image" sk_image_make_non_texture_image ::
  Ptr (Sk_image) -- ^ C argument @"const sk_image_t * cimage"@
  -> IO (Ptr (Sk_image)) -- ^ C return type: @"sk_image_t *"@

-- | Function pointer to 'sk_image_make_non_texture_image'
foreign import ccall "&sk_image_make_non_texture_image" p'sk_image_make_non_texture_image ::
  FunPtr (Ptr (Sk_image) -> IO (Ptr (Sk_image)))

{- | C function signature:

@
sk_image_t *sk_image_make_raster_image(const sk_image_t *cimage)
@
-}
foreign import ccall "sk_image_make_raster_image" sk_image_make_raster_image ::
  Ptr (Sk_image) -- ^ C argument @"const sk_image_t * cimage"@
  -> IO (Ptr (Sk_image)) -- ^ C return type: @"sk_image_t *"@

-- | Function pointer to 'sk_image_make_raster_image'
foreign import ccall "&sk_image_make_raster_image" p'sk_image_make_raster_image ::
  FunPtr (Ptr (Sk_image) -> IO (Ptr (Sk_image)))

{- | C function signature:

@
sk_image_t *sk_image_make_with_filter_raster(const sk_image_t *cimage, const sk_imagefilter_t *filter, const sk_irect_t *subset, const sk_irect_t *clipBounds, sk_irect_t *outSubset, sk_ipoint_t *outOffset)
@
-}
foreign import ccall "sk_image_make_with_filter_raster" sk_image_make_with_filter_raster ::
  Ptr (Sk_image) -- ^ C argument @"const sk_image_t * cimage"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * filter"@
  -> Ptr (Sk_irect) -- ^ C argument @"const sk_irect_t * subset"@
  -> Ptr (Sk_irect) -- ^ C argument @"const sk_irect_t * clipBounds"@
  -> Ptr (Sk_irect) -- ^ C argument @"sk_irect_t * outSubset"@
  -> Ptr (Sk_ipoint) -- ^ C argument @"sk_ipoint_t * outOffset"@
  -> IO (Ptr (Sk_image)) -- ^ C return type: @"sk_image_t *"@

-- | Function pointer to 'sk_image_make_with_filter_raster'
foreign import ccall "&sk_image_make_with_filter_raster" p'sk_image_make_with_filter_raster ::
  FunPtr (Ptr (Sk_image) -> Ptr (Sk_imagefilter) -> Ptr (Sk_irect) -> Ptr (Sk_irect) -> Ptr (Sk_irect) -> Ptr (Sk_ipoint) -> IO (Ptr (Sk_image)))

{- | C function signature:
